test : Refact testcode